<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceWorkingSetListActivity">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSectionLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/section_prices"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/stripDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/tvSectionLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/btnHamburger"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:contentDescription="Navigation Menu"
            android:src="@drawable/ic_menu"
            android:scaleType="centerInside"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stripDivider"/>

        <Spinner
            android:id="@+id/spinPriceSort"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:contentDescription="Sort prices"
            android:minHeight="60dp"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constraintStart_toEndOf="@id/btnHamburger"
            app:layout_constraintEnd_toStartOf="@id/btnTargetFilter"
            app:layout_constraintTop_toBottomOf="@id/stripDivider"/>

        <ImageButton
            android:id="@+id/btnTargetFilter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:contentDescription="Filter by target holdings"
            android:src="@drawable/filter"
            android:scaleType="centerInside"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stripDivider"/>

        <EditText
            android:id="@+id/txtPriceSearch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="Filter by ticker or company"
            android:hint="@string/hint_price_search"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinPriceSort"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txtPriceSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txtPriceSearch"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPriceList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:paddingBottom="88dp"
                android:scrollbars="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_prices"
                android:padding="32dp"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/rvScrollUp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="Scroll up"
                android:src="@android:drawable/arrow_up_float"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/rvScrollDown"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="Scroll down"
                android:src="@android:drawable/arrow_down_float"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
